# cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
basics/: CMakeLists.txt  README.md  SimpleSharedPtr.h  address_ops.h  address_ops.md  binary_search.h  binary_search.md  bitset_ops.h  bitset_ops.md  chrono_ops.h  chrono_ops.md  comma_op_magic.h  constructor.md  copy_elision.h  copy_elision.md  cpu_cache.md  destruct.md  find.md  fold_expression.h  fold_expression.md  heterogenous_lookup.h  heterogenous_lookup.md  initializer.md  iostream.md  iostream_ops.h  iterator_behavior.h  linkage.md  list_ops.h  list_ops.md  main.cpp  object_lifetime.h  parameter_pack.md  permutation.md  priority_queue.md  regex.md  regex_ops.h  run.sh  sfinae.md  smart_pointer.md  smart_pointer_ops.h  (+12 more)
basics/util/: noisy_pod.h
benchmark/: CMakeLists.txt  README.md  (+4 more)
concurrency/: CMakeLists.txt  README.md  common_mistakes.md  deadlock.md  main.cpp  memory_barriers.md  memory_order.md  momory_model.md
concurrency/CHP/: README.md
concurrency/ch2.managing_threads/: CMakeLists.txt  README.md  RaiiThread.h  examples.h  parallelAccumulate.cpp  raiiThreadExample.cpp
concurrency/cia_ch2/: CMakeLists.txt  README.md  RaiiThread.h  examples.h
concurrency/demo/: barrier_example.h  jthread_example.h  memory_order.h  thread_is_heavy.h  thread_local.h  thread_safe_cout.h
concurrency/event_loop/: CMakeLists.txt  README.md  demo.cpp  demo.h  event_loop.h
cpp-idioms/: CMakeLists.txt  README.md  main.cpp
cpp-idioms/code/: CMakeLists.txt  crtp.h  double_dispatch.h
cpp-idioms/notes/: crtp.md  double_dispatch.md
designPattern/: CMakeLists.txt  README.md  genNoteChapter.sh  genSection.sh  main.cpp  maybeMonadUseCase.cpp  maybeMonadUseCase.h
designPattern/10.facade/: README.md  facadeUseCase.h
designPattern/11.flyweight/: CMakeLists.txt  README.md  flyweightUseCase.cpp  flyweightUseCase.h
designPattern/12.proxy/: CMakeLists.txt  README.md  proxyUseCase.cpp  proxyUseCase.h
designPattern/13.chainofresp/: README.md  chainofrespUseCase.cpp  chainofrespUseCase.h
designPattern/14.command/: README.md  commandUseCase.cpp
designPattern/16.iterator/: README.md  iteratorUseCase.cpp  iteratorUseCase.h
designPattern/17.mediator/: README.md  mediatorUseCase.cpp  mediatorUseCase.h
designPattern/18.memento/: README.md  mementoUseCase.cpp  mementoUseCase.h
designPattern/20.observer/: observer.h
designPattern/21.state/: stateUseCase.h
designPattern/22.strategy/: CMakeLists.txt  README.md  strategyUseCase.cpp  strategyUseCase.h
designPattern/23.templatemethod/: README.md  templatemethodUseCase.cpp  templatemethodUseCase.h
designPattern/24.visitor/: CMakeLists.txt  visitor.h  visitorUseCase.cpp  visitorUseCase.h  visitor_impl1.h
designPattern/25.maybeMonad/: README.md  maybeMonad.h  maybeMonadUseCase.h
designPattern/4.prototype/: CMakeLists.txt  prototypeUseCase.cpp  prototypeUseCase.h
designPattern/6.adapter/: adapterUseCase.cpp  adapterUseCase.h
designPattern/7.bridge/: CMakeLists.txt  README.md
designPattern/8.composite/: README.md  compositeUseCase.cpp  compositeUseCase.h
designPattern/9.decorator/: CMakeLists.txt  README.md  decoratorUseCase.cpp  decoratorUseCase.h  dynamicDecorator.h  fileDataSource.h  staticDecorator.h
designPattern/_note_template/: CMakeLists.txt  placeholderUseCase.cpp  placeholderUseCase.h
designPattern/behavior/chainofresp/: CMakeLists.txt  README.md  chainofrespUseCase.cpp
designPattern/behavior/command/: CMakeLists.txt  commandUseCase.h
designPattern/behavior/iterator/: iteratorUseCase.cpp  iteratorUseCase.h
designPattern/behavior/maybeMonad/: README.md  maybeMonad.h
designPattern/behavior/mediator/: README.md
designPattern/behavior/observer/: CMakeLists.txt  observerUseCase.cpp
designPattern/behavior/state/: README.md  state.h  stateUseCase.cpp
designPattern/behavior/templatemethod/: templatemethodUseCase.h
designPattern/behavior/visitor/: README.md  visitorUseCase.cpp  visitor_impl2.h
designPattern/creational/abstractfactory/: CMakeLists.txt  README.md  abstractfactoryUseCase.cpp  abstractfactoryUseCase.h
designPattern/creational/builder/: CMakeLists.txt  builderUseCase.cpp  builderUseCase.h
designPattern/creational/factory/: README.md  factoryUseCase.cpp  factoryUseCase.h
designPattern/design_principles/general/: README.md
designPattern/design_principles/solid/: README.md
designPattern/structural/adapter/: README.md  adapterUseCase.cpp  adapterUseCase.h
designPattern/structural/composite/: CMakeLists.txt  compositeUseCase.cpp  compositeUseCase.h
designPattern/structural/decorator/: decoratorUseCase.h
designPattern/structural/facade/: facadeUseCase.cpp  facadeUseCase.h
gnu/: CMakeLists.txt  README.md
low-latency/benchmark_playground/: CMakeLists.txt  atomic_sharing.h  cache_behavior_item_1.h  cache_behavior_item_2.h  cache_behavior_item_3.h  cache_behavior_item_4.h  cache_behavior_item_6.h  cache_behavior_item_7.h  concurrency_comp.h  falseSharing.h  main.cpp  simd_ops.h  spinlock.h  std_parallel_algo.h
low-latency/coroutine_playground/: CMakeLists.txt  coroutine_between_threads.h  main.cpp
modern-cpp-design/tests/: CMakeLists.txt  test_typelists.cpp
open-source-lib/boost/asio/chat/: CMakeLists.txt  chat_client.cpp  chat_server.cpp
open-source-lib/boost/asio/file-monitor-service/: CMakeLists.txt
open-source-lib/boost/asio/talking_async_talk/: CMakeLists.txt  README.md  step_0.cpp  step_1.cpp  step_2.cpp  step_3.cpp  step_4.cpp  step_5.cpp  step_6.cpp  step_7.cpp
open-source-lib/capnproto/cap-sample/client/: CMakeLists.txt  main.cpp
open-source-lib/protobuf/simple_usage/: CMakeLists.txt  run.sh
template-meta/: CMakeLists.txt  README.md  variadic.h
third-party-lib/boost/: CMakeLists.txt  README.md  cookbook.h  main.cpp  run.sh
third-party-lib/boost/Any/: any.cpp
third-party-lib/boost/asio/: 1.basics.md  2.1.async_model.md  2.2.async_agents.md  3.0.core_concepts.md  README.md  asio.cpp
third-party-lib/grpc/simple_usage/: CMakeLists.txt
third-party-lib/tbb/simple_usage/: CMakeLists.txt  run.sh
(+276 files in other folders)
